--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Courier New', Courier, monospace;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 html, body {
     height: 100%;
@@ -31,7 +31,7 @@ button {
     border: none;
     padding: 1vw;
     background-color: rgba(0,0,0, 0.4);
-    font-size: 1vw; 
+    font-size: 1.5vw; 
     color: white;
     transition: background-color 0.3s ease;
     cursor: pointer;
@@ -47,7 +47,7 @@ button:hover {
 }
 
 #banner {
-    height: 100vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -70,7 +70,7 @@ button:hover {
     flex-direction: column;
     align-items: center;
 }
-.content-section {
+.content-section, .content-section2, .content-section3 {
     display: flex;
     width: 100%;
     background-color: white;
@@ -80,12 +80,12 @@ button:hover {
 }
 
 .content-section img {
-    max-width: 30%;
+    max-width: 40%;
     margin-right: 20px;
 }
 
-.content-section div {
-    max-width: 70%;
+.content-section, .content-section2, .content-section3 div {
+    max-width: 100%;
 }
 
 .content-section h2 {
@@ -94,7 +94,23 @@ button:hover {
     margin-bottom: 10px;
 }
 
-.content-section p {
+.content-section, .content-section2, .content-section3 p {
     font-size: 3vh;
     margin-bottom: 20px;
+}
+.content-section3 img {
+    max-width: 40%;
+    margin-right: 20px;
+}
+.content-section2 h2{
+    font-size: 7vh;
+    color: #006400;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.content-section3 h2{
+    font-size: 7vh;
+    color: #006400;
+    margin-bottom: 10px;
+    text-align: center;
 }
