--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,14 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: "Trebuchet MS", sans-serif;
 }
 html, body {
     height: 100%;
     width: 100%;
 }
  html {
+    scroll-behavior: smooth;
     background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(images/7.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed; 
@@ -16,11 +17,7 @@ html, body {
     background-position: center center;
 } 
 body {
-    /* display: flex;
-    flex-direction: column; */
     min-height: 100vh;
-    width: 100%;
-    font-family:'Courier New', Courier, monospace;
 } 
 
 .menu {
@@ -42,6 +39,29 @@ button:hover {
 .button1,.button2, .button3, .button4, .button5 {
     width: 20vw;
 }
+.button2 {
+    position: relative;
+    display: inline-block;
+}
+.button2-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    width: 20vw;
+}
+.button2-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+.button2 a:hover {
+    background-color: #f1f1f1;
+}
+.button2:hover .button2-content {
+    display: block;
+}
+
 .logos{
     background-color: rgba(0,0,0, 0.4);
 }
@@ -65,13 +85,44 @@ button:hover {
 
 #content {
     padding: 20px;
+    margin-left: 40vh;
+    margin-right: 40vh;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.content-section, .content-section2, .content-section3 {
+.content-section, .content-section2 {
+    font-size: 3vh;
+    margin-bottom: 20px;
+    font-size:large;
+    max-width: 100%;
+    text-align: center;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content-section {
+    width: 100%;
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
+.content-section img {
+    display: block;
+    float: right;
+    margin-bottom: 20px;
+}
+.content-section h2 {
+    font-size: 5vh;
+    
+    color: #006400;
+    margin-bottom: 10px;
+    text-align: center;
+}
+.content-section2{
     width: 100%;
     background-color: white;
     padding: 20px;
@@ -79,38 +130,14 @@ button:hover {
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
-.content-section img {
-    max-width: 40%;
-    margin-right: 20px;
-}
-
-.content-section, .content-section2, .content-section3 div {
-    max-width: 100%;
-}
-
-.content-section h2 {
-    font-size: 7vh;
-    color: #006400;
-    margin-bottom: 10px;
-}
-
-.content-section, .content-section2, .content-section3 p {
-    font-size: 3vh;
-    margin-bottom: 20px;
-}
-.content-section3 img {
-    max-width: 40%;
-    margin-right: 20px;
-}
 .content-section2 h2{
-    font-size: 7vh;
+    font-size: 5vh;
     color: #006400;
     margin-bottom: 10px;
     text-align: center;
 }
-.content-section3 h2{
-    font-size: 7vh;
-    color: #006400;
-    margin-bottom: 10px;
-    text-align: center;
+.content-section2 img {
+    display: block;
+    float: right;
+    margin-bottom: 20px;
 }
