--- a/styles.css
+++ b/styles.css
@@ -85,8 +85,8 @@ button:hover {
 
 #content {
     padding: 20px;
-    margin-left: 40vh;
-    margin-right: 40vh;
+    margin-left: 16%;
+    margin-right: 16%;
     background-color: #f4f4f4;
     display: flex;
     flex-direction: column;
