--- a/styles.css
+++ b/styles.css
@@ -91,6 +91,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     align-items: center;
+    border-radius: 10px;
 }
 .content-section, .content-section2 {
     font-size: 3vh;
